objects/Case_Resolution_Time__c.object
<CustomObject>
    <description>Case Resolution Times</description>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Case Type</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Segment__c</fullName>
        <label>Client Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Segments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Resolution_Time__c</fullName>
        <description>Estimated Resolution Time</description>
        <label>Estimated Resolution Time</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Resolution Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Type__c</columns>
        <columns>Client_Segment__c</columns>
        <columns>Estimated_Resolution_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRT-{000}</displayFormat>
        <label>Case Resolution Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Resolution Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>